--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,6 @@
 @import "tailwindcss/utilities";
 
 @layer utilities {
-
   /* Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
@@ -21,12 +20,12 @@
     /* Firefox */
   }
 
-  input:focus~label,
-  input:not(:placeholder-shown)~label {
+  input:focus ~ label,
+  input:not(:placeholder-shown) ~ label {
     @apply -translate-y-2 text-xsmall-regular;
   }
 
-  input:focus~label {
+  input:focus ~ label {
     @apply left-0;
   }
 
@@ -53,9 +52,43 @@
   }
 }
 
+/* Default dot */
+.custom-pagination .swiper-pagination-bullet {
+  @apply w-10 h-1 transition-all duration-300 rounded-none;
+}
+
+/* Active dot */
+.custom-pagination .swiper-pagination-bullet-active {
+  @apply bg-white w-10 h-1 rounded-none;
+}
+
+.custom-pagination {
+  width: auto !important;
+  left: 50% !important;
+  bottom: 40px !important;
+  right: auto !important;
+  transform: translateX(-50%) !important;
+}
+
 @layer components {
   .content-container {
-    @apply max-w-[1600px] w-full mx-auto px-6;
+    @apply max-w-[1648px] w-full mx-auto px-6;
+  }
+
+  .mainHeading {
+    @apply text-2xl md:text-3xl lg:text-[40px] font-semibold text-center text-[#343636] capitalize mb-3 leading-tight;
+  }
+
+  .mainText {
+    @apply text-base lg:text-lg text-center text-[#808080] max-w-lg mx-auto capitalize;
+  }
+
+  .sectionSpace {
+    @apply py-[30px] md:py-[50px] lg:py-[90px];
+  }
+
+  .customBtn {
+    @apply px-8 py-3 bg-[#73929B] text-white text-base font-semibold hover:bg-[#638089] transition-colors duration-200 ease-in w-max flex items-center gap-x-2 uppercase leading-tight;
   }
 
   .contrast-btn {
